[package]
name = "bevy_blender"
authors = ["Jerald Thomas <jeraldamo@gmail.com>"]
version = "0.11.0"
edition = "2021"
description = "bevy_blender is a Bevy library that allows you to use assets created in Blender directly from the .blend file"
readme = "README.md"
repository = "https://github.com/jeraldamo/bevy_blender"
license = "MIT"
keywords = ["gamedev", "bevy", "blender"]
categories = ["game-development"]


[dependencies]
anyhow = "1.0"
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_pbr",
    "bevy_render",
] }
blend = "0.8"
thiserror = "2.0"

[dev-dependencies]
bevy =  "0.17"

[features]
default = []
